@@ -1,1 +1,15 @@
 # Exercice 1
+
+## Description 
+
+Le but de se programe est de générer une fenêtre. Sur le bord de cette fenêtre des pigeons vont se poser petit a petit. Nous pourront cliquer sur des boutons presents sous la fenêtre afin d'y ajouter de la nourriture pour que les pigeons puissent manger. 
+Les pigeons votn toujours chercher a se deplacer vers la nourriture la plus fraiche.
+Il pourra arriver parfois que les pigeons prennent peur et se dispersent a des positions aleatoire sur la fenêtre.
+
+## Prérequis 
+
+- Java 19
+
+## Execution
+
+``java -jar --enable-preview .\TP2.jar``
